--- a/destiny boutique project/boutique.html
+++ b/destiny boutique project/boutique.html
@@ -10,47 +10,70 @@
 </head>
 
 <body>
+  <div class="boutique">
+    <h1>Bienvenue dans la <span class="boutiquespan"> BOUTIQUE</span> : </h1>
+  </div>
+  <div id="logo2">
+  </div>
+  <div class="headersecondaire">
+    <ul>
+      <li><a href="#gpvp">Pvp_Factions</a></li>
+      <li><a href="#gmini">Mini-jeux (Grades)</a></li>
+      <li><a href="#amini">Mini-Jeux (Atouts)</a></li>
+    </ul>
+  </div>
   <div class="boutique_contenaire_p">
     <div class="boutique_contenaire_carte">
-        <div class="pvp_faction">
+        <div id="gpvp" class="pvp_faction">
           <div class="flip-container4" ontouchstart="this.classList.toggle('hover4');">
             <div class="flipper4">
               <div class="front4">
-                <div id="logo2">
-                </div>
-                <h1>PVP Factions <i class="fas fa-angle-up"></i></h1>
               </div>
               <div class="back4">
-                <h1>GRADES :</h1>
+                <h1 class="gradebooster"> &nbsp; GRADES <span class="span"> Pvp-Factions </span> : </h1>
                 <div class="contenaire">
                   <div class="guerrier grade">
-                    <h1>Guerrier</h1>
-                    <img src="" alt="">
-                    <h2>Prix : </h2>
-                    <div class="description_guerrier grase">
+                    <h1>Guerrier &nbsp; <i class="fas fa-angle-down"></i></h1>
+                    <div class="imageplace">
+                      <img src="grade.png" alt="" class="imagegrade">
+                    </div>
+                    <h2>Prix : <span> 4.99 € </span> <button type="button" name="button" class="button">Buy Now !</button></h2>
+                    <div class="description_guerrier grade">
                       <p>description</p>
                     </div>
                   </div>
+                  <div class="border">
+                  </div>
                   <div class="duc grade">
-                    <h1>Duc</h1>
-                    <img src="" alt="">
-                    <h2>Prix : </h2>
+                    <h1>Duc &nbsp; <i class="fas fa-angle-down"></i></h1>
+                    <div class="imageplace">
+                      <img src="grade.png" alt="" class="imagegrade">
+                    </div>
+                    <h2>Prix : <span> 9.99 € </span> <button type="button" name="button" class="button">Buy Now !</button></h2>
                     <div class="description_duc grade">
                       <p>description</p>
                     </div>
                   </div>
+                  <div class="border">
+                  </div>
                   <div class="seigneur grade">
-                    <h1>Seigneur</h1>
-                    <img src="" alt="">
-                    <h2>Prix : </h2>
+                    <h1>Seigneur &nbsp; <i class="fas fa-angle-down"></i></h1>
+                    <div class="imageplace">
+                      <img src="grade.png" alt="" class="imagegrade">
+                    </div>
+                    <h2>Prix : <span> 24.99 € </span>  <button type="button" name="button" class="button">Buy Now !</button></h2>
                     <div class="description_seigneur grade">
                       <p>description</p>
                     </div>
                   </div>
+                  <div class="border">
+                  </div>
                   <div class="empereur grade">
-                    <h1>Empereur</h1>
-                    <img src="" alt="">
-                    <h2>Prix : </h2>
+                    <h1>Empereur &nbsp; <i class="fas fa-angle-down"></i></h1>
+                    <div class="imageplace">
+                      <img src="grade.png" alt="" class="imagegrade">
+                    </div>
+                    <h2>Prix : <span> 49.99 € </span>  <button type="button" name="button" class="button">Buy Now !</button></h2>
                     <div class="description_empereur grade">
                       <p>description</p>
                     </div>
@@ -60,37 +83,45 @@
             </div>
           </div>
         </div>
-        <div class="minijeux">
+        <div id="gmini" class="minijeux">
           <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
              <div class="flipper">
                 <div class="front">
-                  <div id="logo3">
-                  </div>
-                  <h1>Grades mini Jeux <i class="fas fa-angle-up"></i></h1>
+
                 </div>
                   <div class="back">
-                    <h1>GRADES :</h1>
+                    <h1 class="gradebooster"> &nbsp; GRADES <span class="span"> Mini-Jeux </span> : </h1>
                     <div class="grades">
                       <div class="vip grade">
-                        <h1>VIP</h1>
-                        <img src="" alt="">
-                        <h2>Prix : </h2>
+                        <h1>VIP &nbsp; <i class="fas fa-angle-down"></i></h1>
+                        <div class="imageplace">
+                          <img src="grade.png" alt="" class="imagegrade">
+                        </div>
+                        <h2>Prix : <span> 0.00 € </span> <button type="button" name="button" class="button">Buy Now !</button></h2>
                         <div class="description_vip grade">
                           <p>description</p>
                         </div>
                       </div>
+                      <div class="border">
+                      </div>
                       <div class="vipplus grade">
-                        <h1>VIP+</h1>
-                        <img src="" alt="">
-                        <h2>Prix : </h2>
+                        <h1>VIP+ &nbsp; <i class="fas fa-angle-down"></i></h1>
+                        <div class="imageplace">
+                          <img src="grade.png" alt="" class="imagegrade">
+                        </div>
+                        <h2>Prix : <span> 0.00 € </span> <button type="button" name="button" class="button">Buy Now !</button></h2>
                         <div class="description_vipplus grade">
                           <p>description</p>
                         </div>
                       </div>
+                      <div class="border">
+                      </div>
                       <div class="divi grade">
-                        <h1>DIVINITY</h1>
-                        <img src="" alt="">
-                        <h2>Prix : </h2>
+                        <h1>DIVINITY &nbsp; <i class="fas fa-angle-down"></i></h1>
+                        <div class="imageplace">
+                          <img src="grade.png" alt="" class="imagegrade">
+                        </div>
+                        <h2>Prix : <span> 0.00 € </span> <button type="button" name="button" class="button">Buy Now !</button></h2>
                         <div class="description_divi grade">
                           <p>description</p>
                         </div>
@@ -100,22 +131,21 @@
               </div>
             </div>
         </div>
-        <div class="boosts">
+        <div id="amini"class="boosts">
           <div class="flip-container1" ontouchstart="this.classList.toggle('hover1');">
              <div class="flipper1">
                 <div class="front1">
-                  <div id="logo2">
-                  </div>
-                  <h1>Boosters mini Jeux <i class="fas fa-angle-up"></i></h1>
+
                 </div>
                   <div class="back1">
+                    <h1 class="gradebooster"> &nbsp; Atouts <span class="span"> Mini-Jeux </span> : </h1>
                       <div class="boostt">
-                        <h1>Boostes :</h1>
-                        <p>nothing</p>
+                        <h2> &nbsp;Boostes :</h2>
+                        <p> &nbsp;nothing</p>
                       </div>
                       <div class="faction">
-                        <h1>factions :</h1>
-                        <p>nothing</p>
+                        <h2> &nbsp;Factions :</h2>
+                        <p> &nbsp;nothing</p>
                       </div>
                     </div>
                   </div>
