--- a/destiny boutique project/boutique.html
+++ b/destiny boutique project/boutique.html
@@ -17,14 +17,39 @@
   </div>
   <div class="headersecondaire">
     <ul>
+      <li><span class="enjeu">Crédits</span></li>
+      <li>Vos crédits : 00000</li>
+    </ul>
+  </div>
+  <div class="creditation">
+    <div class="credit">
+        <h2>Besoin de crédits ?</h2>
+        <p>Vous pouvez créditer votre compte en cliquant sur le lien ci-dessous :</p>
+        <p><button type="button" name="button" class="buttoncredit"><a href="#">Créditer mon compte</a></button></p>
+        <div class="condition">
+          <h3><i class="fas fa-exclamation-triangle"></i> &nbsp;&nbsp; Conditions d'utilisation &nbsp;&nbsp;<i class="fas fa-exclamation-triangle"></i></h3>
+          <p>
+            Toute achat est définitif, aucun ramboursement est accordé.
+          </p>
+        </div>
+    </div>
+  </div>
+  <div id="logo3">
+  </div>
+  <div class="headersecondaire">
+    <ul>
+      <li><span class="enjeu">Achats :</span></li>
       <li><a href="#gpvp">Pvp_Factions</a></li>
       <li><a href="#gmini">Mini-jeux (Grades)</a></li>
       <li><a href="#amini">Mini-Jeux (Atouts)</a></li>
     </ul>
   </div>
+  <div class="namename">
+    <h1 id="gpvp" >PVP-Factions &nbsp; <i class="fas fa-angle-down"></i></h1>
+  </div>
   <div class="boutique_contenaire_p">
     <div class="boutique_contenaire_carte">
-        <div id="gpvp" class="pvp_faction">
+        <div class="pvp_faction">
           <div class="flip-container4" ontouchstart="this.classList.toggle('hover4');">
             <div class="flipper4">
               <div class="front4">
@@ -83,7 +108,11 @@
             </div>
           </div>
         </div>
-        <div id="gmini" class="minijeux">
+        <div class="namename">
+          <h1 id="gmini"  >Mini-Jeux &nbsp; <i class="fas fa-angle-down"></i></h1>
+        </div>
+        <h3 class="namename">Grades : </h3>
+        <div class="minijeux">
           <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
              <div class="flipper">
                 <div class="front">
@@ -131,7 +160,10 @@
               </div>
             </div>
         </div>
-        <div id="amini"class="boosts">
+        <div class="namename">
+          <h3 id="amini" >Atouts : </h3>
+        </div>
+        <div class="boosts">
           <div class="flip-container1" ontouchstart="this.classList.toggle('hover1');">
              <div class="flipper1">
                 <div class="front1">
